--- a/style.css
+++ b/style.css
@@ -43,3 +43,37 @@ img {
     grid-row: span 3;
     background-color: antiquewhite;
 }
+
+@media (max-width: 767px) {
+    .container {
+        width: 400px;
+        grid-template-columns: 200px fit-content(200px);
+        grid-template-rows: 100px 200px 250px 250px;
+        font-size: 75%;
+        display: grid;
+    }
+
+    #title {
+        grid-column: span 2;
+    }
+
+    #cover {
+        grid-row: 2
+    }
+    
+    #general-info {
+        grid-row: 2;
+        grid-column: 2;
+    }
+
+    #tracklist {
+        grid-row: 3, span 1;
+        grid-column: 1;
+    }
+
+    #singles {
+        grid-row: 3, span 1;
+        grid-column: 2;
+    }
+
+}
