--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ img {
     .container {
         width: 400px;
         grid-template-columns: 200px fit-content(200px);
-        grid-template-rows: 100px 200px 250px 250px;
+        grid-template-rows: 100px 200px 200px 200px 100px;
         font-size: 75%;
         display: grid;
     }
@@ -62,18 +62,13 @@ img {
     }
     
     #general-info {
-        grid-row: 2, span 1;
+        grid-row: span 2;
         grid-column: 2;
     }
 
     #tracklist {
         grid-row: 3, span 1;
         grid-column: 1;
-    }
-
-    #singles {
-        grid-row: 3;
-        grid-column: 2;
     }
 
 }
